--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(hello)
 
 file(GLOB_RECURSE SRC_FILES src/*.cpp)
 add_executable(hello main.cpp ${SRC_FILES})
-target_include_directories(hello PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/dough)
+target_include_directories(hello PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
