--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10) 
 
-project(hello)
+project(main)
 
 file(GLOB_RECURSE SRC_FILES src/*.cpp)
-add_executable(hello main.cpp ${SRC_FILES})
-target_include_directories(hello PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+add_executable(main main.cpp ${SRC_FILES})
+target_include_directories(main PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
