--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-    "files.associations": {
-        "iostream": "cpp",
-        "ostream": "cpp"
-    }
+    "makefile.makefilePath": "/home/ethan/Documents/GitHub/Dough-Engine/build"
 }
