Particle Gravity Demo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,14 @@ file(GLOB_RECURSE SRC_FILES src/*.cpp)
 add_executable(Main-DEMO demos/maindemo.cpp ${SRC_FILES})
 target_include_directories(Main-DEMO PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(Main-DEMO PUBLIC /usr/local/lib/libraylib.so)
+
 add_executable(ParticleCollisions-DEMO demos/pcollisions-demo.cpp ${SRC_FILES})
 target_include_directories(ParticleCollisions-DEMO PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(ParticleCollisions-DEMO PUBLIC /usr/local/lib/libraylib.so)
+
+add_executable(ParticleGravity-DEMO demos/pgravity-demo.cpp ${SRC_FILES})
+target_include_directories(ParticleGravity-DEMO PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_link_libraries(ParticleGravity-DEMO PUBLIC /usr/local/lib/libraylib.so)
 #file(GLOB DEMO_SOURCES demo/*.cpp)
 #foreach(testsourcefile ${DEMO_SOURCES})
 #    get_filename_component( testname ${testsourcefile} NAME_WE )
